Update AUTHORS and LICENSE

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Adam Hintz <adam.0.dev@gmail.com>
+Adam Hintz <adam.o.dev@gmail.com>
 Alastair Lynn <arplynn@gmail.com>
 Scott McClaugherty <gamefreak4321@gmail.com>
 Andrew Moscoe <andrew.moscoe@gmail.com>
